dist/manifests/kubernetes-cluster-manifests/registry-ui/99registry-ui-from-helm.yml
# ---
# # boss__registry__ui__enable_tls
# # SOURCE: https://cert-manager.readthedocs.io/en/latest/tutorials/ca/creating-ca-issuer.html
# apiVersion: certmanager.k8s.io/v1alpha1
# kind: Certificate
# metadata:
#   name: docker-registry-ui-tls-certificate
#   # namespace: kube-system
# spec:
#   secretName: docker-registry-ui-tls-certificate
#   issuerRef:
#     name: selfsigning-issuer
#     # We can reference ClusterIssuers by changing the kind here.
#     # The default value is Issuer (i.e. a locally namespaced Issuer)
#     kind: ClusterIssuer
#   commonName: registry-ui.hyenaclan.org
#   organization:
#   - Hyena Labs
#   dnsNames:
#   - registry-ui.hyenaclan.org
#   - www.registry-ui.hyenaclan.org

# ---
# # Source: docker-registry-ui/templates/secret.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: docker-registry-ui-secret
#   labels:
#     app: docker-registry-ui
#     k8s-app: registry-ui
#     kubernetes.io/cluster-service: "true"
#     addonmanager.kubernetes.io/mode: Reconcile
#     boss-part-of: registry-ui
#     version: "0.6"
#
#
# type: Opaque
# data:
#   haSharedSecret: "eVU5a2ZKNndFODV1TmczTQ=="

---
# Source: docker-registry-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  labels:
    app: docker-registry-ui
    k8s-app: registry-ui
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: registry-ui
    version: "0.6"


  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"

spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: registry
      targetPort: 80
    # - port: 5001
    #   protocol: TCP
    #   name: registry
    #   targetPort: 5001
  selector:
    app: docker-registry-ui
    k8s-app: registry-ui


---
# Source: docker-registry-ui/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-registry-ui
  labels:
    app: docker-registry-ui
    k8s-app: registry-ui
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: registry-ui
    version: "0.6"


spec:
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry-ui
        k8s-app: registry-ui
        kubernetes.io/cluster-service: "true"
        addonmanager.kubernetes.io/mode: Reconcile
        boss-part-of: registry-ui
        version: "0.6"

      annotations: {}
    spec:
      # securityContext:
      #   fsGroup: 1000
      #   runAsUser: 1000
      containers:
        - name: docker-registry-ui
          image: "joxit/docker-registry-ui:0.6"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80

          resources:
            {}
---
# Source: docker-registry-ui/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ui
  labels:
    app: docker-registry-ui
    k8s-app: registry-ui
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: registry-ui
    version: "0.6"
  annotations:
      # certmanager.k8s.io/issuer: "selfsigning-issuer"
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      # nginx.ingress.kubernetes.io/rewrite-target: "\\\"/\\\""
      # nginx.ingress.kubernetes.io/ssl-redirect: "\\\"false\\\""
      # nginx.ingress.kubernetes.io/ssl-redirect: "\\\"false\\\""
      nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - host: registry-ui.hyenaclan.org
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry-ui
              servicePort: 80
  # tls:
  #   - hosts:
  #     - registry-ui.hyenaclan.org
  #     secretName: docker-registry-ui-tls-certificate

---
# Source: docker-registry-ui/templates/pvc.yaml
